# cpp-goats

./: CMakeLists.txt  README.md
.github/workflows/: codacy.yml  codeql.yml  devskim.yml  flawfinder.yml  semgrep.yml
src/: address-cwe-120.cpp  address-cwe-121.cpp  address-cwe-122.cpp  address-cwe-124.cpp  address-cwe-126.cpp  address-cwe-131.cpp  address-cwe-562.cpp  address-google-example.cpp  cfi-cert-oop50.cpp  cfi-cert-oop52.cpp  cfi-cert-oop55.cpp  cfi-cwe-396.cpp  cfi-cwe-478.cpp  cfi-trailofbits-derived_cast.cpp  cfi-trailofbits-icall.c  cfi-trailofbits-nvcall.cpp  cfi-trailofbits-unrelated_cast.cpp  cfi-trailofbits-vcall.cpp  mem-cwe-244.c  mem-cwe-415.cpp  mem-cwe-416.cpp  mem-cwe-457.cpp  mem-cwe-806.cpp  mem-cwe-843.c  mem-google-example.cpp  mem-vyukova-example.cpp  thread-cwe-366.cpp  thread-google-datarace.cpp  ub-cwe-129.cpp  ub-cwe-188.cpp  ub-cwe-191.c  ub-cwe-195.c  ub-cwe-588.c  ub-vyukova-example.cpp
